feat: user selection in the dropdown menu in landing page is shown when going to the study and create screen